# data_engineering

./: README.md
learning/aws-training/ai-machine-learning/: ai.md  lab2.ipynb
learning/aws-training/cloud-practitioner/: cloud_practitioner_notes.md  lab-app.tgz
learning/go/get_tomb_contracts/: TODO  go.mod  main.go
learning/go/greetings/: greetings.go
learning/go/hello/: hello.go
learning/go/market_seed/: go.mod  has_market_seeded.go
learning/haskell/compound_crypto/: compound.hs
learning/haskell/compound_interest/: ChangeLog.md  Compound.hs  Main.hs  compound.cabal
learning/haskell/dt_example/: dt.hs
learning/haskell/flip/: flip.hs  flip.py
learning/haskell/higher_order_functions/: Chain.hs  chain.hs  folds.hs  function_operators.hs  higher_orderism.hs  intro.hs  lambdas.hs  maps_and_filters.hs
learning/haskell/recursion/: examples.hs  hello.hs
learning/haskell/starting_out/: baby.hs
learning/haskell/syntax_in_functions/: guards.hs  pattern_matching.hs
learning/haskell/types_and_typeclasses/: type_variables.hs  types.hs
learning/kubernetes/: cdk.json  go.mod  go.sum  kubernetes.go  kubernetes_test.go
learning/packer/packer_airflow/: aws-airflow.auto.pkrvars.hcl  aws-airflow.pkr.hcl
learning/packer/packer_tutorial/: aws-ubuntu.pkr.hcl  example.auto.pkrvars.hcl
learning/rust/async_iot/: Cargo.toml
learning/terraform/: .gitignore
learning/terraform/learn-terraform-aws-instance/: main.tf
learning/udemy/aws_certified_four_certifications/: notes.md  recall.md
learning/udemy/aws_machine_learning_python/: notes.md
learning/udemy/jenkins_zero_to_hero/: .gitignore  notes.md
projects/: helper_commands.md
projects/building_dot_net/: notes.md
projects/combine_parquet/combpq/: Cargo.toml
projects/combine_parquet/combpq/src/: main.rs  refactor.rs
projects/combine_parquet/pydf/: Cargo.toml  example.py  profile.py  pyproject.toml
projects/combine_parquet/pydf/src/: lib.rs  stats.rs
projects/combine_parquet/tar_object_store/: .gitignore  Cargo.toml  targz_to_tar.sh  test_run.sh
projects/combine_parquet/tar_object_store/src/: cli_parser.rs  main.rs  resampler.rs  schema.rs  tar_metadata.rs  tar_object_store.rs
projects/cylc_playground/: notes.md
projects/cylc_playground/docker/: Makefile  docker-compose.yml
projects/dash_poama_uplift/: Makefile  docker-compose.yml  index.py  requirements.txt
projects/dash_poama_uplift/nginx/: .dockerignore  Dockerfile  Makefile  project.conf
projects/dash_poama_uplift/notes/: notes.md
projects/dash_poama_uplift/poama/: app.py  callbacks.py  layouts.py  nav_config.py  states.py
projects/dash_poama_uplift/poama_api/: Dockerfile  Makefile  poama_api.py
projects/dash_poama_uplift/poama_app/: .dockerignore  .gitignore  CHECKS  Dockerfile  Makefile  Procfile  deploy_instructions.md  deploy_instructions_ebs.md  deploy_instructions_ec2.md  requirements.txt  wsgi.py
projects/dash_poama_uplift/poama_d3/: .gitignore  index.html
projects/dash_poama_uplift/poama_lambda/: .gitignore  00_upload_assets.sh  00_upload_zarr_files.sh  01_build_packages.sh  02_package_partial_core_deps.sh  03_deploy_stack.sh  04_delete_stack.sh  05_cleanup.sh  README.md  cleanup_stack.sh  cors-config.json  deploy_scripts.cfg  deploy_stack.sh  inspect_stack.sh  lambda_data_bucket_lifecycle.json  package_partial_core_deps.sh  package_partial_deps.sh  push_sample_data_to_s3.sh  pytest.ini  show_lambda_logs.sh  template.yaml  upload_assets.sh  upload_zarr_files.sh
projects/dash_poama_uplift/spinup_test_ec2_instance/: .gitignore  Makefile  deploy-ec2.yml  deploy_scripts.cfg  ec2-setup.sh  generate_deploy_params.sh  requirements.txt  upload_zarr_files.sh
projects/discord/easter_eggs/: click_button.js  post_message.sh
projects/docker/registry-upload-example/: notes.md  push_layers.sh  push_manifest.sh
projects/docker/try-sql/: Dockerfile  run_example.sh  run_example_dockerfile.sh
projects/gb/: aim.py  drag.py  mouse_example.py
projects/google_drive_api_test/: notes.md  test_download.py
projects/hackathon_2021/: Makefile  activate-local  docker-compose.yml
projects/hackathon_2021/api/: Dockerfile  docker-entrypoint.sh  requirements.txt  rqworker.service  run_hack_api.py
projects/hackathon_2021/app/: package-lock.json  rollup.config.js
projects/hackathon_2021/app_dev/: package.json
projects/hackathon_2021/deploy_ec2/: .gitignore  Makefile  deploy-ec2.yml  deploy_scripts.cfg  ec2-setup.sh  generate_deploy_params.sh  notes.md
projects/hackathon_2021/ingest/: ingest.py  mongo.py
projects/hackathon_2021/nginx/: Dockerfile  project.conf
projects/helper_scripts/sts_saml_token/: 001_get_temp_credentials.sh  002_test_describe_instances.sh  003_cleanup_temp_credentials.sh  notes.md
projects/message_queue/: .gitignore  Makefile  docker-compose.yml  notes.md
projects/message_queue/celery_tasks/: run_task_family.py
projects/porting_hrs/: convert_ssi.js  copy_html_to_aws_fast.sh  invalidate_cloudfront.sh  node_requirements.txt  reset_shtml.sh  run_web_server.sh
projects/rigs/scripts/: restart-if-no-internet.sh
projects/stf_timescale_db/: .gitignore  Makefile  cleanup_sample_data_bucket.sh  deploy-ec2-params.json.sample  deploy-ec2.yml  deploy-multi-ec2.yml  deploy_scripts.cfg  docker-compose.override.yml.sample  docker-compose.yml  ec2-setup.sh  generate_deploy_params.sh  get_sample_data_from_s3.sh  upload_sample_data_to_s3.sh
projects/stf_timescale_db/grafana/: .env
projects/stf_timescale_db/nginx/: project.conf
projects/stf_timescale_db/notes/: notes.md
projects/stf_timescale_db/scripts/: exec_query_generic.sh
projects/stf_timescale_db/stf_api/: Dockerfile  dump_model.sh  gen_model.py  requirements.txt
projects/stf_timescale_db/stf_dash/: .gitignore  Dockerfile  index.py  requirements.txt  requirements.txt.sample
projects/stf_timescale_db/stf_db/: .env
projects/stf_timescale_db/stf_ingest_lambda/: 01_build.sh  02_deploy_stack.sh  04_cleanup_stack.sh  (+2 more)
projects/streamflow/: .gitignore  dash-app.py  fc01.csv  generate_data.py  notes.md  obs01.csv  x.geojson
sample_vimrc/: .vimrc
(+264 files in other folders)
