[package]
name = "combpq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
datafusion = "31.0.0"
futures = "0.3.28"
object_store = "0.7.1"
sysinfo = "0.29.10"
tar = "0.4.40"
tokio = "1.33.0"
