[package]
name = "pydf"
version = "0.0.0-pre-alpha"
edition = "2021"
authors = ["nikeeth.ramanathan@gmail.com"]
description = """

           ┌─>>>──|──>>>──|───>>>>>>>>>>>───┐
  ─────────┤ pydf |  sql  | datafusion+rust ├────────
           └──────|───────|─────────────────┘
           >made @DSET for internal use only
           >comes with 0 warranty

> CAUTION: this is a work in progress.

Description
-----------
This tool is a python module written in rust to query common data sources using python. Yes datafusion is natively 
supported via python, but this is a taylored made implementation for learning purposes, without heavy API layers in 
between.

Currently this tool is not packaged via pip/conda - add this driectory PYTHONPATH env variable to use.

Built using pyo3 (crate) and mauritin (pip module).

See README for sample usage.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pydf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
