[package]
name = "pydf"
version = "0.0.0-dev"
edition = "2021"
authors = ["nikeeth.ramanathan@gmail.com"]
description = """

           ┌─>>>──|──>>>──|───>>>>>>>>>>>───┐
  ─────────┤ pydf |  sql  | datafusion+rust ├────────
           └──────|───────|─────────────────┘
           >made @DSET for internal use only
           >comes with 0 warranty

> CAUTION: this is a work in progress.

Description
-----------
This tool is a python module written in rust to query common data sources using python. Yes,
datafusion is natively supported via python, but this is a taylor made implementation for learning
purposes; without heavy API layers in between.

Currently this tool is not packaged via pip/conda - add this driectory to PYTHONPATH env variable.

Built using pyo3 (crate) and mauritin (pip module).

See README for sample usage.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pydf"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
datafusion = "32.0.0"
log = "0.4.20"
pyo3 = { version = "0.19.0", features = ["macros"] }
sysinfo = "0.29.10"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
