[package]
name = "tar_object_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "48.0.0"
async-trait = "0.1.74"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["rkyv"] }
datafusion = "32.0.0"
futures = "0.3.28"
object_store = "0.7.1"
regex = "1.10.2"
tar = "0.4.40"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
url = "2.4.1"
rkyv = "0.7.42"
